<resources>
    <string name="app_name">GV</string>
    <string name="author">Author: Evan Charlton</string>
    <string name="contact">gv@evancharlton.com</string>
    <string name="bugs_email_address">bugs@evancharlton.com</string>
    <string name="website">http://evancharlton.com/projects/gv</string>
    <string name="username">Username</string>
    <string name="username_description">Your Google Voice username</string>
    <string name="password">Password</string>
    <string name="password_description">Your Google Voice password</string>
    <string name="gv_number">Google Voice number</string>
    <string name="google_voice">Google Voice</string>
    <string name="gv_sms">GV SMS</string>
    <string name="normal_phone">Carrier</string>
    <string name="login">Log In</string>
    <string name="me">Me</string>
    <string name="copy">Copy</string>
    <string name="dialer">Dialer</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="voicemail">Mail</string>
    <string name="dialerDialpadHintText">Dial to add a call</string>
    <string name="recentCalls_addToContact">Add to contacts</string>
    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
    <string name="dialer_returnToInCallScreen">Return to call in progress</string>
    <string name="dialer_addAnotherCall">Add call</string>
    <string name="save_changes">Save Changes</string>
    <string name="loading">Loading</string>
    <string name="reload">Reload</string>
    <string name="loading_voicemail">Loading voicemail...</string>
    <string name="login_failed_title">Login failed!</string>
    <string name="login_failed_message">There was an error logging in to Google Voice.\nPlease check your provided information and try again.</string>
    <string name="dialerKeyboardHintText">Use Keyboard To Dial</string>
    <string name="operations">Contact Options</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="to">To</string>
    <string name="send">Send</string>
    <string name="settings_title">GV Settings</string>
    <string name="call_log">Call Log</string>
    <string name="loading_log">Loading call log...</string>
    <string name="loading_log_msg">Loading call log information...</string>
	<string name="more">Load more</string>
    <string name="downloading_voicemail_title">Downloading...</string>
    <string name="downloading_voicemail">Downloading voicemail...</string>
    <string name="voicemail_actions_title">Call</string>
    <string name="delete_sms_confirm">Delete SMS?</string>
    <string name="delete_sms_confirm_msg">Are you sure you want to delete this conversation? This can only be undone through the Google Voice website!</string>
    <string name="delete_voicemail_confirm">Delete Voicemail?</string>
    <string name="delete_voicemail_confirm_msg">Are you sure you want to delete this message? This can only be undone through the Google Voice website!</string>
    <string name="deleting_voicemail">Deleting voicemail...</string>
    <string name="deleting_voicemail_msg">Please wait, this message is being deleted...</string>
    <string name="delete_call_log_confirm">Delete entry?</string>
    <string name="delete_call_log_confirm_msg">Are you sure you want to delete this entry? This can only be undone through the Google Voice website!</string>
    <string name="number_dialog_title">Contact Numbers</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="call_back">Call back</string>
    <string name="dial_out">Dial out</string>
    <string name="error">Error!</string>
    <string name="about_thanks">Thanks to:\n
    	Oren Goldberg\n
    	Defcon\n
    	Tyler LeBeau\n
    	Dan Gartman\n
    	Chris Caraccioli\n
    	TommyBres\n
    	Aakash Patel\n
    	Everyone who suggested application names\n
    	Everyone who donated\n
    	And everyone else not mentioned.\n</string>
    <string name="help_contents">GV is an Android interface for the Google Voice service. Note that this application is highly dependent on the
    Google Voice team not changing their mobile HTTP interface anytime soon, and will almost certainly break this application if they do.\n
    I highly recommend that if you enjoy this application, write the Google Voice team to request an official version, or at least a
    supported API.</string>
    <string name="calling_gc">Starting call...</string>
    <string name="calling_gc_msg">Placing the call...</string>
    <string name="calling">Calling...</string>
    <string name="calling_msg">Waiting for Google Voice to call...</string>
    <string name="logging_in">Logging in...</string>
    <string name="logging_in_msg">Logging in to Google Voice...</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
    <string name="sms">SMS</string>
    <string name="return_call">Call</string>
    <string name="return_call_title">Return Call</string>
    <string name="return_call_message">Return call using:</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="delete_failed_msg">There was an error deleting your voicemail! Please try again; if it fails, send a message to gv@evancharlton.com</string>
    <string name="donate">If you enjoy this application and would like to donate, please feel free to do so:\nhttp://evancharlton.com/donate/</string>
    <string name="retrieving_settings">Retrieving settings</string>
    <string name="retrieving_settings_msg">Fetching your Google Voice settings; please be patient.</string>
    <string name="splash_header">Welcome to GV!</string>
    <string name="compose">New message</string>
    <string name="compose_sms">Compose Google Voice SMS</string>
    <string name="compose_gv_sms">Send GV SMS</string>
	<string name="sms_type_to_compose">Type to compose</string>
	<string name="toggle_speakerphone">Toggle Speaker</string>
    <string name="splash_text">GV allows you to use the Google Voice service from your Android phone. <b>You will need a Google Voice account in order to use this application!</b>\n\n
    If you do not have a Google Voice account, please sign up to receive an invitation by using this page: https://services.google.com/fb/forms/googlevoiceinvite . Note that Google Voice is currently in a closed beta and you might not get an invitation right away.\n\n
    If you have any questions, feel free to send me an email: gv@evancharlton.com Note that I do not have any invitations and I have no affiliation with Google so I have no idea when Google Voice will come out of beta.</string>
    <string name="previous">Previous</string>
 	<string name="next">Next</string>
 	<string name="finish">Finish</string>
    <string name="setup_googlevoice">GV Setup Wizard</string>
    <string name="setup_login_information">Type in your Google Voice login information</string>
    <string name="setup_username">Google Voice username</string>
    <string name="setup_password">Google Voice password</string>
    <string name="setup_testing_login">Testing login information...</string>
    <string name="setup_phone_numbers">Configure your Google Voice phones</string>
    <string name="setup_loading_phones">Loading stored phones...</string>
    <string name="setup_edit_phone">Edit a saved phone</string>
    <string name="setup_add_phone">Add a new phone</string>
    <string name="setup_edit_phones">Edit your phones</string>
    <string name="setup_googlevoice_settings">Google Voice settings</string>
    <string name="setup_local_settings">GV Application settings</string>
    <string name="setup_working">Working...</string>
    <string name="phones_error">Your forwarding phones could not be loaded! Please try again or email bugs@evancharlton.com</string>
    <string name="phone_enabled">Enable this phone</string>
    <string name="phone_name">Name</string>
    <string name="phone_name_hint">A short description of the phone</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_hint">The phone number of this phone</string>
    <string name="phone_type">Phone type</string>
    <string name="phone_receive_sms">Receive SMS on this mobile phone</string>
    <string name="phone_delete">Delete this phone</string>
    <string name="phone_delete_title">Are you sure?</string>
    <string name="phone_delete_message">Are you sure that you want to delete this phone?</string>
    <string name="phone_deleting">Deleting phone...</string>
    <string name="phone_delete_failed_title">Could not delete!</string>
    <string name="phone_delete_failed_message">This phone could not be deleted! If this is the only phone on your account, you must add another one before deleting this one.</string>
    <string name="phone_deleted">Phone deleted!</string>
    <string name="phone_verify_text">This phone must be verified before it can receive calls from Google Voice.\n\nGoogle Voice will call your phone and prompt you to enter the following code:</string>
    <string name="phone_verify">Verify phone</string>
    <string name="phone_verifying">Verifying phone...</string>
    <string name="phone_verified">Verified successfully!</string>
    <string name="phone_verify_later">Verify later</string>
    <string name="phone_verify_failed_title">Verification failed!</string>
    <string name="phone_verify_failed_message">We were unable to submit the request to verify your phone. Please make sure that you entered a phone number. If this happens again, please file a bug report (bugs@evancharlton.com).</string>
    <string name="phone_saving">Saving phone...</string>
    <string name="phone_save_failed_title">Unabled to save phone!</string>
    <string name="phone_save_failed_message">Your phone was unable to be saved! Please make sure everything is filled out and try again.</string>
    <string name="phone_policy">Voicemail</string>
    <string name="settings_call_screening">Screen calls from</string>
    <string name="settings_call_presentation">Enable call presentation</string>
    <string name="settings_caller_id">Display G.V. number instead of caller\'s</string>
    <string name="settings_voicemail_pin">Voicemail PIN (required)</string>
    <string name="settings_voicemail_pin_hint">Your Google Voice PIN</string>
    <string name="settings_do_not_disturb">Do not disturb</string>
    <string name="settings_do_not_disturb_on">No calls will be forwarded</string>
    <string name="settings_do_not_disturb_off">Calls will be forwarded as normal</string>
    <string name="settings_do_not_disturb_updating">Saving \'do not disturb\' preference...</string>
    <string name="settings_voicemail_transcripts">Enable voicemail transcriptions</string>
    <string name="settings_loading_googlevoice_settings">Loading Google Voice settings...</string>
    <string name="settings_load_failed_title">Loading failed!</string>
    <string name="settings_always_use_gv">Route all calls through GV</string>
    <string name="settings_unread_interval">Check for new messages:</string>
    <string name="settings_calling_method">Calling method:</string>
    <string name="settings_login_information">Google Voice Login</string>
    <string name="settings_login_information_description">Edit your Google Voice login information</string>
    <string name="settings_edit_phones">Forwarding Phones</string>
    <string name="settings_edit_phones_description">Configure or add forwarding phones to your Google Voice account</string>
    <string name="settings_gv">GV Settings</string>
    <string name="settings_gv_description">Configure how the GV application behaves</string>
    <string name="settings_phone_number">Your callback number (required)</string>
    <string name="settings_phone_number_hint">Almost always your cell number</string>
</resources>