<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
		>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/phone_name"
			/>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/phone_name_hint"
				android:id="@+id/name"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/phone_number"
			/>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/phone_number_hint"
				android:id="@+id/number"
				android:inputType="phone"
			/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:layout_width="fill_parent"
					android:layout_weight="1"
					android:layout_height="?android:attr/listPreferredItemHeight"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/phone_type"
				/>
				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/phone_types"
					android:id="@+id/type"
				/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:layout_width="fill_parent"
					android:layout_weight="1"
					android:layout_height="?android:attr/listPreferredItemHeight"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/phone_policy"
				/>
				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/phone_policies"
					android:id="@+id/policy"
				/>
			</LinearLayout>
			<CheckBox
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/phone_receive_sms"
				android:id="@+id/sms"
			/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:visibility="gone"
		android:id="@+id/activation"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:clickable="true"
		android:background="#CC000000"
		android:orientation="vertical"
		android:gravity="center"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FFF"
			android:paddingLeft="5dip"
			android:paddingRight="5dip"
			android:gravity="center"
			android:text="@string/phone_verify_text"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="?android:attr/listPreferredItemHeight"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/code"
			android:textSize="20pt"
			android:text="54"
			android:gravity="center"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="bottom"
		>
			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/phone_verify"
				android:id="@+id/connect"
			/>
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
			/>
			<Button
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/phone_verify_later"
				android:id="@+id/cancel"
			/>
		</LinearLayout>
	</LinearLayout>
	<include layout="@layout/setup_overlay"/>
</merge>