<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingRight="5dip"
		>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:layout_width="fill_parent"
					android:layout_weight="1"
					android:layout_height="?android:attr/listPreferredItemHeight"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/settings_always_use_gv"
					android:id="@+id/always_label"
					android:textColor="#FFF"
				/>
				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/always_use_gv"
				/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:layout_width="fill_parent"
					android:layout_weight="1"
					android:layout_height="?android:attr/listPreferredItemHeight"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/settings_calling_method"
				/>
				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/calling_methods"
					android:id="@+id/call_methods"
				/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:layout_width="fill_parent"
					android:layout_weight="1"
					android:layout_height="?android:attr/listPreferredItemHeight"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:text="@string/settings_unread_interval"
				/>
				<Spinner
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:entries="@array/voicemail_intervals"
					android:id="@+id/unread_interval"
				/>
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#FFF"
				android:text="@string/settings_phone_number"
			/>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/phone_number"
				android:hint="@string/settings_phone_number_hint"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#FFF"
				android:text="@string/settings_voicemail_pin"
			/>
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/pin"
				android:hint="@string/settings_voicemail_pin_hint"
				android:inputType="phone"
				android:password="true"
			/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="bottom"
		android:orientation="horizontal"
	>
		<Button
			android:id="@+id/previous"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/previous"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/next"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/next"
		/>
	</LinearLayout>
</LinearLayout>