<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<TextView
			android:text="@string/setup_phone_numbers"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:id="@+id/number"
			android:gravity="center"
			android:text="@string/loading"
		/>
		<ListView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:id="@+id/phones"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<Button
				android:id="@+id/previous"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/previous"
			/>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
			/>
			<Button
				android:id="@+id/next"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/next"
			/>
		</LinearLayout>
	</LinearLayout>
	<include layout="@layout/setup_overlay"/>
</merge>