<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android"
>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
	>
		<TextView
			android:text="@string/setup_login_information"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		/>
		<EditText
			android:id="@+id/username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/username_description"
			android:singleLine="true"
		/>
		<EditText
			android:id="@+id/password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/password_description"
			android:password="true"
			android:singleLine="true"
		/>
		<include layout="@layout/setup_footer"/>
	</LinearLayout>
	<include layout="@layout/setup_overlay"/>
</merge>