<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<TextView
			android:id="@+id/contact"
			android:layout_width="fill_parent"
	   		android:layout_height="?android:attr/listPreferredItemHeight"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_marginRight="5dip"
			android:gravity="center_vertical"
		/>
		<TextView
			android:gravity="right"
			android:layout_marginLeft="5dip"
			android:id="@+id/contact_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
   		android:layout_height="?android:attr/listPreferredItemHeight"
		android:orientation="horizontal"
		android:gravity="center_vertical"
	>
		<SeekBar
			android:id="@+id/seek"
			android:layout_width="fill_parent"
	   		android:layout_height="wrap_content"
		/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<Button
			android:id="@+id/play_pause"
			android:text="@string/play"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:enabled="false"
		/>
		<Button
			android:id="@+id/reply"
			android:text="@string/return_call"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/sms"
			android:text="@string/sms"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
		/>
	</LinearLayout>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
	>
		<TextView
			android:id="@+id/transcript"
			android:paddingLeft="5dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingRight="5dip"
			android:textColor="#fff"
		/>
	</ScrollView>
</LinearLayout>